css/dashboard.css
:root {
  --colorGreen: #9dfe00b0;
  --colorRed: #ff5e47;

  --primary: #adb6f4;
  --primary-content: #13238f;
  --primary-dark: #808eee;
  --primary-light: #dadefa;

  --secondary: #f5e573;
  --secondary-content: #625707;
  --secondary-dark: #f2dc43;
  --secondary-light: #f8eea3;

  --background: #ededf3;
  --foreground: #fafbfc;
  --border: #d9dae5;

  --copy: #1f212e;
  --copy-light: #52577a;
  --copy-lighter: #757ba3;

  --success: #adf4ad;
  --warning: #f4f4ad;
  --error: #f4adad;
  --success-content: #138f13;
  --warning-content: #8f8f13;
  --error-content: #8f1313;

  --border-shadow: #969691;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #14161f;
    --foreground: #1f212e;
    --border: #33364d;

    --copy: #fafbfc;
    --copy-light: #d1d3e0;
    --copy-lighter: #9498b8;

    --border-shadow: #0a0a0a;
  }
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

.hidden {
  display: none;
  visibility: hidden;
  width: 0;
  height: 0;
}

@media (hover: none),
  (hover: on-demand),
  (-moz-touch-enabled: 1),
  (pointer: coarse) and (max-width: 900px) {
  /*make a bigger interface for smartphones and tuched device*/
  html {
    font-size: 18px;
  }
}

button {
  padding: 0.3em;
  border-radius: 0.3em;
  margin: 0.1em;
  color: var(--copy);
  background-color: var(--foreground);
}

button:hover,
input:hover,
select:hover {
  box-shadow: 2px 2px 8px var(--border);
  background-color: var(--border);
}

button:active {
  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.5);
}

*:disabled {
  opacity: 0.5;
}

input,
select {
  color: var(--copy);
  background-color: var(--foreground);
  border-radius: 3px;
}

/*---------
Main layout
---------*/
html {
  font-family: Arial, Helvetica, sans-serif;
  background-color: var(--background);
}
body {
  display: flex;
  flex-flow: column;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

section {
  color: var(--copy);
}

/*---------
Navigation Menu
---------*/

#NavigationTitle {
  display: grid;
  grid-template-columns: 2em 2.4em auto min-content;
  width: 100vw;
  position: relative;
  padding: 0.2em 0.5em;
  z-index: 2;
  background-color: var(--primary);
  box-shadow: 0px 0px 5px 2px var(--border-shadow);
  height: 2.4em;
}

#showLeftPanel {
  cursor: pointer;
  height: 100%;
  padding-top: 0.2em;
}

#showLeftPanelCheckbox {
  visibility: hidden;
  display: none;
}

.burgerLayer {
  display: block;
  width: 80%;
  height: 4px;
  border-radius: 2px;
  background-color: black;
  float: left;
  margin: calc((100% - 4px * 3 - 0.2em) / 4) 0 0 0;
}

#NavigationTitle img {
  float: left;
  width: 2em;
  display: inline-block;
  z-index: 5;
}
#NavigationTitle h1 {
  float: left;
  height: 100%;
  margin: 0.1em 0.2em;
  z-index: 5;
  /*width: max-content;calc(100vw - 0.2em - 2em - (1em + 50px));*/
  overflow: hidden;
}

#updateAll {
  float: right;
  background-color: var(--success); /* Green */
  color: var(--success-content);
  border: none;
  padding: 6px;
  text-align: center;
  text-decoration: none;
  border-radius: 3px;
  display: block;
  font-size: 16px;
  position: relative;
  cursor: pointer;
}

#navigationList {
  display: flex;
  margin-top: 0; /*-0.2em;*/
}

#navigationList > li {
  list-style: none;
  width: 100%;
  text-align: center;
  z-index: 3;
}

#navigationList a {
  text-decoration: none;
  padding: 0.2em;
  width: 100%;
  height: 100%;
  display: block;
  color: black;
}

#navigationList a:hover {
  font-weight: bold;
}

#progress-bar {
  height: 1.5em;
  top: 2.4em;
  width: calc(100% / 3);
  background-color: var(--primary);
  border-radius: 0 0 0.4em 0.4em;
  z-index: 2;
  left: 0;
  position: absolute;
  box-shadow:
    4px 2px 4px -2px var(--border-shadow),
    -4px 2px 4px -2px var(--border-shadow);
}
#progress-bar-back {
  height: 4.2em;
  top: -0.3em;
  width: 100%;
  background-color: var(--secondary);
  left: 0;
  animation: marginLeft 0.3s;
  position: absolute;
  z-index: 1;
  border-radius: 0.4em;
  box-shadow: 0px 0px 5px 2px var(--border-shadow);
}

/*---------
Loading animation
---------*/
#loadingAnnim {
  left: calc(50vw - 40px);
  top: calc(50vh - 40px);
}
#loadingAnnim div {
  border-color: var(--primary-dark) transparent transparent transparent;
}
.lds-ring {
  display: inline-block;
  position: absolute;
  z-index: 100;
  width: 80px;
  height: 80px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid var(--foreground);
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: var(--foreground) transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/*---------
leftPanel layout
---------*/
#leftPanelBackground {
  visibility: hidden;
}
#leftPanel {
  background-color: var(--foreground);
  visibility: inherit;
  display: grid;
  grid-template-rows: max-content minmax(0, 1fr) max-content;
  position: absolute;
  top: 0;
  left: -100vw;
  z-index: 100;
  height: 100vh;
  width: 100vw;
  max-width: 300px;
  transition: left 0.2s;
}

#showLeftPanelCheckbox:checked ~ #leftPanel,
#showLeftPanelCheckbox:checked ~ #leftPanelBackground {
  left: 0;
  visibility: visible;
}

#PanelTitle {
  display: grid;
  grid-template-columns: 2em 2.4em auto;
  background-color: var(--primary);
  box-shadow: 0px 0px 5px 2px var(--border-shadow);
  padding: 0.2em 0.5em;
}

#PanelTitle > label {
  padding-top: calc(2em / 2 - 4px);
  line-height: 0;
}

#PanelTitle > label > strong {
  display: block;
  width: 100%;
  height: 5px;
  border-radius: 4px;
  background-color: black;
  padding: 0;
}
.Xside1 {
  transform: translate(0, calc(50% * 1.1)) rotate(0.125turn);
}
/* ... */

